# novella-bind-score

./: .gitignore  README.md  pyproject.toml
data/: features_events.csv  features_submissions.csv
notebooks/: 01_eda.ipynb  02_model.ipynb  03_outbound_coefficient.ipynb
reports/: final_report.html  pipeline_and_model.html
scripts/: additive_feature_test.py  agent_alone_by_t.py  agent_features_test.py  best_subset_selection.py  build_html_report.py  build_outbound_notebook.py  build_pipeline_doc.py  class_weight_test.py  comment_feature_checks.py  cv_noise_walkthrough.py  data_quality_audit.py  feature_importance_shap.py  new_features_test.py  outbound_quantile_check.py  outbound_quote_interaction.py  per_t_vs_pooled.py  t0_best_history_feature.py  t0_customer_history_model.py  why_not_agent_alone.py
src/: evaluate.py  features.py  model.py  preprocessing.py
