[tool.poetry]
name = "novella-bind-score"
version = "0.1.0"
description = "Novella bind-score challenge — effort-prioritization score for insurance submissions"
authors = ["Yonatan Erlich <yonila2@gmail.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2"
numpy = "^2.0"
matplotlib = "^3.8"
scikit-learn = "^1.5"
jupyterlab = "^4.0"
ipykernel = "^6.29"
xgboost = "^3.2.0"
shap = "^0.52.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.6"
